[+] app theme preference [!] v1.0.1-dev

--- a/app/src/main/res/drawable/nav_item_background.xml
+++ b/app/src/main/res/drawable/nav_item_background.xml
@@ -8,7 +8,7 @@
         <corners
             android:bottomRightRadius="30dp"
             android:topRightRadius="30dp" />
-        <solid android:color="@color/menu_item" />
+        <solid android:color="?menuItemColor" />
         <padding android:bottom="6dp" />
     </shape>
 </inset>
