--- a/app/src/main/res/layout/drawer.xml
+++ b/app/src/main/res/layout/drawer.xml
@@ -5,6 +5,7 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_gravity="start"
+    android:background="?card_background"
     android:theme="@style/ThemeOverlay.NavItem.Ripple"
     app:headerLayout="@layout/navigation_header"
     app:itemBackground="@drawable/menu_item_background"
