--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -72,7 +72,7 @@
                     android:layout_marginStart="@dimen/padding_middle"
                     android:layout_marginTop="@dimen/padding_middle"
                     android:layout_marginEnd="@dimen/padding_middle"
-                    app:cardBackgroundColor="@color/cardview_light_background"
+                    app:cardBackgroundColor="?card_background"
                     app:cardCornerRadius="@dimen/card_radius"
                     app:cardElevation="1dp"
                     app:cardUseCompatPadding="true"
@@ -106,7 +106,8 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="@dimen/padding_standart"
                             android:layout_marginEnd="@dimen/padding_middle"
-                            android:text="Telegram"
+                            android:text="@string/telegram"
+                            android:textColor="?textColorSecondary"
                             app:layout_constraintBottom_toBottomOf="@id/icon"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toEndOf="@id/icon"
@@ -120,7 +121,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/padding_middle"
                     android:layout_marginEnd="@dimen/padding_middle"
-                    app:cardBackgroundColor="@color/cardview_light_background"
+                    app:cardBackgroundColor="?card_background"
                     app:cardCornerRadius="@dimen/card_radius"
                     app:cardElevation="1dp"
                     app:cardUseCompatPadding="true"
@@ -154,7 +155,8 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="@dimen/padding_standart"
                             android:layout_marginEnd="@dimen/padding_middle"
-                            android:text="Web"
+                            android:text="@string/web"
+                            android:textColor="?textColorSecondary"
                             app:layout_constraintBottom_toBottomOf="@id/iconWeb"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toEndOf="@id/iconWeb"
@@ -168,7 +170,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/padding_middle"
                     android:layout_marginEnd="@dimen/padding_middle"
-                    app:cardBackgroundColor="@color/cardview_light_background"
+                    app:cardBackgroundColor="?card_background"
                     app:cardCornerRadius="@dimen/card_radius"
                     app:cardElevation="1dp"
                     app:cardUseCompatPadding="true"
@@ -202,7 +204,8 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="@dimen/padding_standart"
                             android:layout_marginEnd="@dimen/padding_middle"
-                            android:text="Email"
+                            android:text="@string/email_"
+                            android:textColor="?textColorSecondary"
                             app:layout_constraintBottom_toBottomOf="@id/iconEmail"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toEndOf="@id/iconEmail"
@@ -218,7 +221,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/padding_middle"
                     android:layout_marginEnd="@dimen/padding_middle"
-                    app:cardBackgroundColor="@color/cardview_light_background"
+                    app:cardBackgroundColor="?card_background"
                     app:cardCornerRadius="@dimen/card_radius"
                     app:cardElevation="1dp"
                     app:cardUseCompatPadding="true"
@@ -252,7 +255,8 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="@dimen/padding_standart"
                             android:layout_marginEnd="@dimen/padding_middle"
-                            android:text="Github"
+                            android:text="@string/github"
+                            android:textColor="?textColorSecondary"
                             app:layout_constraintBottom_toBottomOf="@id/iconGithub"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toEndOf="@id/iconGithub"
