--- a/app/src/main/res/layout/item_my_contests_list.xml
+++ b/app/src/main/res/layout/item_my_contests_list.xml
@@ -9,7 +9,7 @@
         android:id="@+id/mainView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardBackgroundColor="@color/cardview_light_background"
+        app:cardBackgroundColor="?card_background"
         app:cardCornerRadius="@dimen/card_radius"
         app:cardElevation="2dp"
         app:cardUseCompatPadding="true">
@@ -24,20 +24,20 @@
             android:paddingBottom="@dimen/padding_middle">
 
             <TextView
-                app:layout_constraintEnd_toEndOf="@id/name"
-                app:layout_constraintStart_toStartOf="@id/icon"
-                app:layout_constraintTop_toTopOf="parent"
                 android:id="@+id/isfinal"
                 style="@style/TextStyle.Type.Bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/padding_middle"
                 android:background="@drawable/back_final"
                 android:ellipsize="end"
-                android:layout_marginTop="@dimen/padding_middle"
                 android:text="@string/isfinal"
                 android:textColor="?textColorPrimary"
                 android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="@id/name"
                 app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@id/icon"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:visibility="visible" />
 
             <tech.hombre.freelancehunt.common.widgets.CustomImageView
@@ -66,6 +66,7 @@
                 android:layout_marginStart="@dimen/padding_middle"
                 android:layout_marginEnd="@dimen/padding_middle"
                 android:ellipsize="end"
+                android:textColor="?textColorSecondary"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/icon"
                 app:layout_constraintTop_toTopOf="@id/icon"
@@ -78,6 +79,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/padding_middle"
                 android:layout_marginBottom="@dimen/padding_middle"
+                android:textColor="?textColorSecondary"
                 app:layout_constraintStart_toStartOf="@id/name"
                 app:layout_constraintTop_toBottomOf="@id/name"
                 tools:text="Фирменный стиль и логотип" />
@@ -91,6 +93,7 @@
                 android:drawableStart="@drawable/purse"
                 android:drawablePadding="@dimen/padding_small"
                 android:gravity="center"
+                android:textColor="?textColorSecondary"
                 app:layout_constraintStart_toStartOf="@id/icon"
                 app:layout_constraintTop_toBottomOf="@id/barrier"
                 tools:text="8 500 ₴" />
@@ -127,6 +130,7 @@
                 android:drawableStart="@drawable/calendar"
                 android:drawablePadding="@dimen/padding_small"
                 android:gravity="center"
+                android:textColor="?textColorSecondary"
                 tools:text="Через 2 дня" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
