--- a/app/src/main/res/layout/item_threads_list.xml
+++ b/app/src/main/res/layout/item_threads_list.xml
@@ -9,7 +9,7 @@
         android:id="@+id/mainView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardBackgroundColor="@color/cardview_light_background"
+        app:cardBackgroundColor="?card_background"
         app:cardCornerRadius="@dimen/card_radius"
         app:cardElevation="2dp"
         app:cardUseCompatPadding="true">
@@ -52,6 +52,7 @@
                 android:layout_marginTop="@dimen/padding_small"
                 android:layout_marginEnd="@dimen/padding_middle"
                 android:ellipsize="end"
+                android:textColor="?textColorSecondary"
                 app:layout_constraintBottom_toBottomOf="@id/icon"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/icon"
@@ -74,6 +75,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/padding_middle"
                 android:gravity="center"
+                android:textColor="?textColorSecondary"
                 app:layout_constraintBottom_toBottomOf="@id/avatar"
                 app:layout_constraintStart_toEndOf="@id/avatar"
                 app:layout_constraintTop_toTopOf="@id/avatar"
@@ -101,6 +103,7 @@
                 android:drawableStart="@drawable/time"
                 android:drawablePadding="@dimen/padding_small"
                 android:gravity="center"
+                android:textColor="?textColorSecondary"
                 app:layout_constraintBottom_toBottomOf="@id/avatar"
                 app:layout_constraintEnd_toStartOf="@id/status"
                 app:layout_constraintTop_toTopOf="@id/avatar"
