--- a/app/src/main/res/drawable/bg_msg_left.xml
+++ b/app/src/main/res/drawable/bg_msg_left.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/white" />
+    <solid android:color="?card_background" />
 
     <corners
         android:bottomLeftRadius="4dp"
