--- a/app/src/main/res/drawable/bg_msg_right.xml
+++ b/app/src/main/res/drawable/bg_msg_right.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/message_my" />
+    <solid android:color="?drawerHeaderColor" />
     <corners
         android:bottomLeftRadius="4dp"
         android:bottomRightRadius="4dp"
