--- a/app/src/main/res/drawable/parcel.xml
+++ b/app/src/main/res/drawable/parcel.xml
@@ -6,7 +6,7 @@
     android:viewportHeight="40">
 
     <path
-        android:fillColor="?colorPrimary"
+        android:fillColor="?iconColor"
         android:pathData="M5.174,8.994 L13.972,8.994 L13.972,4.404 C13.972,3.629,14.604,2.996,15.38,2.996
 L24.593,2.996 C25.368,2.996,26,3.629,26,4.404 L26,8.994 L34.798,8.994
 C36.009,8.994,36.998,9.982,36.998,11.193 L36.998,18.99 L22.97,18.99
