--- a/app/src/main/res/layout/activity_employer_detail.xml
+++ b/app/src/main/res/layout/activity_employer_detail.xml
@@ -10,8 +10,8 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
         android:elevation="0dp"
+        android:fitsSystemWindows="true"
         android:theme="@style/ActionBarTheme">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
@@ -34,6 +34,7 @@
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
+                    android:background="?attr/colorPrimary"
                     app:contentInsetStartWithNavigation="0dp"
                     app:layout_collapseMode="pin"
                     app:subtitleTextAppearance="@style/TextStyle.Appbar.Subtitle"
@@ -67,21 +68,21 @@
                         <androidx.cardview.widget.CardView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            app:cardBackgroundColor="@color/cardview_light_background"
+                            app:cardBackgroundColor="?card_background"
                             app:cardCornerRadius="@dimen/card_radius"
                             app:cardElevation="0dp"
                             app:cardUseCompatPadding="false">
 
-                            <include layout="@layout/placeholder_employer"/>
+                            <include layout="@layout/placeholder_employer" />
 
                             <androidx.constraintlayout.widget.ConstraintLayout
                                 android:id="@+id/content"
-                                android:visibility="invisible"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:layout_marginBottom="@dimen/padding_middle"
                                 android:paddingStart="@dimen/padding_middle"
-                                android:paddingEnd="@dimen/padding_middle">
+                                android:paddingEnd="@dimen/padding_middle"
+                                android:visibility="invisible">
 
                                 <tech.hombre.freelancehunt.common.widgets.CustomImageView
                                     android:id="@+id/avatar"
@@ -100,6 +101,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="@dimen/padding_middle"
                                     android:text="@string/message"
+                                    android:textColor="?textColorSecondary"
                                     android:visibility="gone"
                                     app:layout_constraintEnd_toEndOf="@id/avatar"
                                     app:layout_constraintStart_toStartOf="@id/avatar"
@@ -131,6 +133,7 @@
                                     android:layout_marginStart="@dimen/padding_middle"
                                     android:layout_marginTop="@dimen/padding_standart"
                                     android:layout_marginEnd="@dimen/padding_middle"
+                                    android:textColor="?textColorSecondary"
                                     app:layout_constraintEnd_toStartOf="@id/avatar"
                                     app:layout_constraintStart_toStartOf="parent"
                                     app:layout_constraintTop_toTopOf="parent"
@@ -142,6 +145,7 @@
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="0dp"
+                                    android:textColor="?textColorSecondary"
                                     app:layout_constraintEnd_toEndOf="@id/flowlogin"
                                     app:layout_constraintStart_toStartOf="@id/name"
                                     app:layout_constraintTop_toBottomOf="@id/flowlogin"
@@ -241,6 +245,7 @@
                                     android:layout_marginStart="@dimen/padding_small"
                                     android:layout_marginTop="@dimen/padding_middle"
                                     android:layout_marginEnd="@dimen/padding_middle"
+                                    android:textColor="?textColorSecondary"
                                     app:layout_constraintEnd_toStartOf="@id/avatar"
                                     app:layout_constraintStart_toEndOf="@id/locationIcon"
                                     app:layout_constraintTop_toBottomOf="@id/flow"
@@ -256,6 +261,7 @@
                                     android:drawableStart="@drawable/birthday"
                                     android:drawablePadding="@dimen/padding_small"
                                     android:gravity="center_vertical"
+                                    android:textColor="?textColorSecondary"
                                     app:layout_constraintEnd_toStartOf="@id/avatar"
                                     app:layout_constraintStart_toStartOf="@id/rating"
                                     app:layout_constraintTop_toBottomOf="@id/location"
@@ -271,6 +277,7 @@
                                     android:drawableStart="@drawable/date"
                                     android:drawablePadding="@dimen/padding_small"
                                     android:gravity="center_vertical"
+                                    android:textColor="?textColorSecondary"
                                     app:layout_constraintEnd_toStartOf="@id/avatar"
                                     app:layout_constraintStart_toStartOf="@id/rating"
                                     app:layout_constraintTop_toBottomOf="@id/birthdate"
@@ -290,9 +297,15 @@
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="?card_background"
+            app:tabIconTint="@color/tab_icon_background"
+            app:tabIndicatorColor="?iconColor"
+            app:tabSelectedTextColor="?menuIconActive"
+            app:tabTextColor="?menuIconUnactive">
 
             <com.google.android.material.tabs.TabItem
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:icon="@drawable/overview"
