--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,81 +9,80 @@
     tools:context=".ui.login.view.LoginActivity">
 
     <androidx.appcompat.widget.AppCompatImageView
-        app:srcCompat="@drawable/apiback"
-        android:scaleType="centerCrop"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        app:srcCompat="@drawable/apiback" />
 
     <androidx.cardview.widget.CardView
-        app:layout_constraintHeight_default="percent"
-        app:layout_constraintHeight_percent=".7"
         android:id="@+id/cardView"
-        app:cardBackgroundColor="@color/htransparent"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        app:cardBackgroundColor="@color/htransparent"
+        app:cardCornerRadius="@dimen/card_radius"
+        app:cardElevation="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent=".7"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:cardCornerRadius="@dimen/card_radius"
-        app:cardElevation="2dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:gravity="center_vertical"
-            android:layout_gravity="center_vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:gravity="center_vertical"
             android:orientation="vertical">
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:layout_weight="1"
                 android:id="@+id/icon"
                 android:layout_width="144dp"
                 android:layout_height="144dp"
                 android:layout_gravity="center"
-                app:srcCompat="@drawable/logo"
-                 />
+                android:layout_weight="1"
+                app:srcCompat="@drawable/logo" />
 
             <TextView
-                android:layout_weight="1"
                 android:id="@+id/authCodeHint"
                 style="@style/TextStyle.Title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_weight="1"
                 android:autoLink="web"
                 android:gravity="center"
                 android:text="@string/login_hint"
                 android:textSize="20sp" />
 
             <LinearLayout
-                android:layout_weight="1"
                 android:id="@+id/codeView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_weight="1"
                 android:gravity="center"
                 android:orientation="vertical">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:layout_marginTop="@dimen/padding_middle"
                     android:id="@+id/token"
-                    android:elevation="4dp"
                     android:layout_width="match_parent"
                     android:layout_height="44dp"
                     android:layout_marginStart="@dimen/padding_standart"
+                    android:layout_marginTop="@dimen/padding_middle"
                     android:layout_marginEnd="@dimen/padding_standart"
-                    android:translationZ="8dp"
                     android:background="@drawable/token_input"
+                    android:digits="0,1,2,3,4,5,6,7,8,9,*,qwertzuiopasdfghjklyxcvbnm"
+                    android:elevation="4dp"
                     android:ellipsize="end"
                     android:gravity="center"
                     android:hint="@string/token_hint"
-                    android:inputType="text"
                     android:imeOptions="actionDone"
-                    android:digits="0,1,2,3,4,5,6,7,8,9,*,qwertzuiopasdfghjklyxcvbnm"
+                    android:inputType="text"
                     android:maxLines="1"
                     android:scrollHorizontally="true"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    android:translationZ="8dp" />
 
                 <ProgressBar
                     android:id="@+id/loginLoadingProgress"
@@ -102,10 +101,10 @@
                     android:layout_width="144dp"
                     android:layout_height="72dp"
                     android:layout_marginTop="@dimen/padding_standart"
+                    android:layout_marginBottom="@dimen/padding_standart"
                     android:elevation="6dp"
                     android:stateListAnimator="@null"
                     android:text="@string/signin"
-                    android:layout_marginBottom="@dimen/padding_standart"
                     android:translationZ="5dp"
                     android:visibility="visible" />
 
