--- a/app/src/main/res/layout/activity_project_detail.xml
+++ b/app/src/main/res/layout/activity_project_detail.xml
@@ -12,8 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
-        app:elevation="0dp"
-        android:theme="@style/ActionBarTheme">
+        android:theme="@style/ActionBarTheme"
+        app:elevation="0dp">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsingToolbar"
@@ -35,6 +35,7 @@
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
+                    android:background="?attr/colorPrimary"
                     app:contentInsetStartWithNavigation="0dp"
                     app:layout_collapseMode="pin"
                     app:subtitleTextAppearance="@style/TextStyle.Appbar.Subtitle"
@@ -68,7 +69,7 @@
                             android:id="@+id/reviewView"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            app:cardBackgroundColor="@color/cardview_light_background"
+                            app:cardBackgroundColor="?card_background"
                             app:cardCornerRadius="@dimen/card_radius"
                             app:cardElevation="0dp"
                             app:cardUseCompatPadding="false"
@@ -209,7 +210,12 @@
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="?card_background"
+            app:tabIconTint="@color/tab_icon_background"
+            app:tabIndicatorColor="?iconColor"
+            app:tabSelectedTextColor="?menuIconActive"
+            app:tabTextColor="?menuIconUnactive">
 
             <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
