--- a/app/src/main/res/layout/bottom_menu_choose_bid.xml
+++ b/app/src/main/res/layout/bottom_menu_choose_bid.xml
@@ -17,7 +17,7 @@
         android:drawablePadding="@dimen/padding_middle"
         android:text="@string/choose_bid"
         android:textAllCaps="true"
-        android:textColor="?android:textColorPrimary"
+        android:textColor="?textColorSecondary"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/padding_standart"
         android:text="@string/comment"
-        android:textColor="?android:textColorPrimary"
+        android:textColor="?textColorSecondary"
         app:layout_constraintEnd_toEndOf="@id/chooseBidTitle"
         app:layout_constraintStart_toStartOf="@id/chooseBidTitle"
         app:layout_constraintTop_toBottomOf="@id/chooseBidTitle" />
@@ -43,6 +43,8 @@
         android:lines="3"
         android:paddingTop="0dp"
         android:textAppearance="@style/TextStyle.Chat.Text"
+        android:textColor="?textColorSecondary"
+        android:textColorHint="?textColorSecondary"
         app:layout_constraintEnd_toEndOf="@id/chooseBidTitle"
         app:layout_constraintStart_toStartOf="@id/chooseBidTitle"
         app:layout_constraintTop_toBottomOf="@id/commentTitle" />
@@ -54,8 +56,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/choose"
+        android:textColor="?textColorSecondary"
         app:icon="@drawable/bid"
         app:iconPadding="@dimen/padding_middle"
+        app:iconTint="?iconColor"
         app:layout_constraintEnd_toEndOf="@id/chooseBidTitle"
         app:layout_constraintTop_toBottomOf="@id/comment" />
 
