--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -37,8 +37,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:menu="@menu/menu_bottom"
-            tools:layout_editor_absoluteX="8dp" />
+            app:menu="@menu/menu_bottom" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </FrameLayout>
 
