--- a/app/src/main/res/layout/item_feed_list.xml
+++ b/app/src/main/res/layout/item_feed_list.xml
@@ -9,7 +9,7 @@
         android:id="@+id/mainView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardBackgroundColor="@color/cardview_light_background"
+        app:cardBackgroundColor="?card_background"
         app:cardCornerRadius="@dimen/card_radius"
         app:cardElevation="2dp"
         app:cardUseCompatPadding="true">
@@ -55,6 +55,7 @@
                 android:layout_marginStart="@dimen/padding_middle"
                 android:layout_marginEnd="@dimen/padding_middle"
                 android:ellipsize="end"
+                android:textColor="?textColorSecondary"
                 tools:text="ybilevcov" />
 
             <TextView
@@ -85,8 +86,8 @@
                 style="@style/TextStyle.Type.Bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/padding_middle"
                 android:layout_marginStart="@dimen/padding_middle"
+                android:layout_marginTop="@dimen/padding_middle"
                 android:background="@drawable/type"
                 android:drawableStart="@drawable/project_small"
                 android:drawablePadding="@dimen/padding_small"
@@ -106,6 +107,7 @@
                 android:layout_marginTop="@dimen/padding_middle"
                 android:layout_marginEnd="@dimen/padding_middle"
                 android:layout_marginBottom="@dimen/padding_middle"
+                android:textColor="?textColorSecondary"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@id/flow"
@@ -120,6 +122,7 @@
                 android:layout_marginEnd="@dimen/padding_middle"
                 android:drawableStart="@drawable/time"
                 android:drawablePadding="@dimen/padding_small"
+                android:textColor="?textColorSecondary"
                 app:layout_constraintBottom_toBottomOf="@id/type"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
