--- a/app/src/main/res/layout/item_my_bids_list.xml
+++ b/app/src/main/res/layout/item_my_bids_list.xml
@@ -9,7 +9,7 @@
         android:id="@+id/mainView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardBackgroundColor="@color/cardview_light_background"
+        app:cardBackgroundColor="?card_background"
         app:cardCornerRadius="@dimen/card_radius"
         app:cardElevation="2dp"
         app:cardUseCompatPadding="true">
@@ -43,10 +43,10 @@
                 android:id="@+id/bidStatus"
                 style="@style/TextStyle.Type.Bold"
                 android:layout_width="wrap_content"
-                android:drawableStart="@drawable/bid_small"
-                android:drawablePadding="@dimen/padding_small"
                 android:layout_height="wrap_content"
                 android:background="@drawable/back_bid_status"
+                android:drawableStart="@drawable/bid_small"
+                android:drawablePadding="@dimen/padding_small"
                 android:textColor="?textColorPrimary"
                 tools:text="Активна" />
 
@@ -55,9 +55,9 @@
                 style="@style/TextStyle.Type.Bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/back_status"
                 android:drawableStart="@drawable/project_small"
                 android:drawablePadding="@dimen/padding_small"
-                android:background="@drawable/back_status"
                 android:textColor="?textColorPrimary"
                 tools:text="Закрыт без выполнения" />
 
@@ -70,6 +70,7 @@
                 android:layout_marginEnd="@dimen/padding_middle"
                 android:layout_marginBottom="@dimen/padding_middle"
                 android:autoLink="all"
+                android:textColor="?textColorSecondary"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/flow"
                 app:layout_constraintTop_toBottomOf="@id/flow"
@@ -82,6 +83,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/padding_middle"
                 android:autoLink="all"
+                android:textColor="?textColorSecondary"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/name"
                 app:layout_constraintTop_toBottomOf="@id/name"
@@ -118,6 +120,7 @@
                 android:drawableStart="@drawable/bid"
                 android:drawablePadding="@dimen/padding_small"
                 android:gravity="center"
+                android:textColor="?textColorSecondary"
                 tools:text="8300 ₴" />
 
             <TextView
@@ -128,6 +131,7 @@
                 android:drawableStart="@drawable/calendar"
                 android:drawablePadding="@dimen/padding_small"
                 android:gravity="center"
+                android:textColor="?textColorSecondary"
                 tools:text="2 дня" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
