--- a/app/src/main/res/layout/item_skill_list.xml
+++ b/app/src/main/res/layout/item_skill_list.xml
@@ -3,15 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/containerSkill"
-    android:paddingBottom="@dimen/padding_small"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingBottom="@dimen/padding_small">
 
     <TextView
         android:id="@+id/name"
         style="@style/TextStyle.Title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:textColor="?textColorSecondary"
         app:layout_constraintEnd_toStartOf="@id/position"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
