--- a/app/src/main/res/values-ru/arrays.xml
+++ b/app/src/main/res/values-ru/arrays.xml
@@ -78,4 +78,9 @@
         <item>Прямой расчет</item>
     </string-array>
 
+    <string-array name="pref_theme_entries">
+        <item>Светлая</item>
+        <item>Темная</item>
+    </string-array>
+
 </resources>
