--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -6,6 +6,16 @@
         android:title="@string/pref_app_title">
 
         <ListPreference
+            app:icon="@drawable/theme"
+            android:defaultValue="@string/pref_theme_default"
+            android:dialogTitle="@string/pref_theme"
+            android:entries="@array/pref_theme_entries"
+            android:entryValues="@array/pref_theme_values"
+            android:key="KEY_APP_THEME"
+            android:summary="%s"
+            android:title="@string/pref_theme" />
+
+        <ListPreference
             app:icon="@drawable/lang"
             android:defaultValue="@string/pref_language_default"
             android:dialogTitle="@string/pref_language"
